ajax: add submit button to login-form
Signed-off-by: Marietje D <marietjed@zuidslet.science.ru.nl>

--- a/ajax/htdocs/index.html
+++ b/ajax/htdocs/index.html
@@ -41,6 +41,8 @@
 				</tr><tr>
 					<td><label for="loginFormPass">password</label></td>
 					<td><input id="loginFormPass" type="password"/></td>
+				</tr><tr>
+					<td colspan="2"><button id="loginFormSubmit">Ok</button></td>
 				</tr></table>
 			</div>
 		</div>
